# vike

./: .gitignore  Cargo.toml  build.rs  report.json
.cargo/: config.toml
dep/: Cargo.toml
dep/src/: main.rs
shaders/: billboard.frag  billboard.vert  billboard_shader.frag  billboard_shader.vert  equirectangular.wgsl  hdr.wgsl  light.wgsl  shader.wgsl  simple_shader.frag  simple_shader.vert  standard_shader.frag  standard_shader.vert
src/: app.rs  camera.rs  debug.rs  game_object.rs  hdr.rs  lib.rs  main.rs  movement.rs  renderer.rs  resources.rs  simple_render_system.rs  texture.rs
src/render_systems/: billboard_render_system.rs  mod.rs  simple_render_system.rs  standard_render_system.rs
triangle/src/: main.rs
vike/: Cargo.toml
vike-example/: Cargo.toml
vike-example/src/: main.rs
vike-test/: Cargo.toml
vike-test/src/: main.rs
vike/src/: camera.rs  debug.rs  game_object.rs  hdr.rs  lib.rs  renderer.rs  resources.rs
