[workspace]
members = ["vike", "vike-example"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jason Wiemels <jason.wiemels@gmail.com>"]

[workspace.dependencies]
winit = { version = "0.29", features = ["rwh_06"], default-features = false }
image = { version = "0.25", features = [
    "png",
    "jpeg",
], default-features = false }
futures-lite = "2.6.0"
