[package]
name = "vike-test"
edition = "2021"
version = "0.1.0"

[dependencies]
vike = { path = "../vike" }
glam = "0.26"
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_06"], default-features = false }
image = { version = "0.25", features = ["png", "jpeg"], default-features = false }
env_logger = "0.10"
pollster = "0.3"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
