[package]
name = "vike"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
cfg-if = "1"
log = "0.4"
web-time = "1.1.0"
glam = "0.26"
wgpu = "0.19"
bytemuck = { version = "1.15", features = ["min_const_generics", "extern_crate_alloc", "derive", "bytemuck_derive"], default-features = false }
getrandom = { version = "0.2", features = ["js"] }
image = { version = "0.25", features = ["png", "jpeg"], default-features = false }
tobj = "4.0"
winit = { version = "0.29", features = ["rwh_06"], default-features = false }
futures-intrusive = "0.5.0"

[target."cfg(target_arch = \"wasm32\")".dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "Location"] }
wgpu = { version = "0.19", features = ["webgl"] }

[lib]
crate-type = ["cdylib", "rlib"]
required-features = []
