[package]
name = "vike"
edition = "2024"
version = "0.1.0"

[dependencies]
winit = { workspace = true }
image = { workspace = true }
futures-lite = { workspace = true }
glam = "0.26"
tobj = { version = "4.0.0", features = ["futures"] }
anyhow = "1.0"
log = "0.4"
web-time = "1.1.0"
bytemuck = { version = "1.15", features = [
    "min_const_generics",
    "extern_crate_alloc",
    "derive",
    "bytemuck_derive",
], default-features = false }
cfg-if = "1"
futures-intrusive = "0.5.0"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
wgpu = "0.19"
async-fs = "2.1.2"

[target."cfg(target_arch = \"wasm32\")".dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Response"] }
wgpu = { version = "0.19", default-features = false, features = [
    "wgsl",
    "webgl",
] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
required-features = []
